First commited as before_63299_rev1