@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2015 IBM Corporation and others.
+ * Copyright (c) 2007, 2011 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -655,7 +655,7 @@ public class HandlerUtil {
 			throw new ExecutionException("The command's toggle state doesn't contain a boolean value"); //$NON-NLS-1$
 
 		boolean oldValue = ((Boolean) state.getValue()).booleanValue();
-		state.setValue(Boolean.valueOf(!oldValue));
+		state.setValue(new Boolean(!oldValue));
 		return oldValue;
 	}
 
